--- a/app/src/main/res/layout/itemview_league_odd_v5.xml
+++ b/app/src/main/res/layout/itemview_league_odd_v5.xml
@@ -486,7 +486,6 @@
         android:id="@+id/ll_cs_text_layout"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginVertical="4dp"
         android:background="@color/color_191919_FCFCFC"
         android:orientation="horizontal"
         android:visibility="visible"
@@ -500,8 +499,10 @@
             android:id="@+id/tv_correct_1"
             android:layout_width="70dp"
             android:layout_height="match_parent"
+            android:layout_marginEnd="8dp"
             android:gravity="center"
-            android:textColor="@color/color_909090_666666"
+            android:textColor="@color/color_a3a3a3_666666"
+            android:textSize="@dimen/textSize12sp"
             android:textStyle="bold"
             tools:text="abc" />
 
@@ -510,7 +511,8 @@
             android:layout_width="70dp"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:textColor="@color/color_909090_666666"
+            android:textColor="@color/color_a3a3a3_666666"
+            android:textSize="@dimen/textSize12sp"
             tools:text="abc" />
 
     </LinearLayout>
