--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -87,6 +87,7 @@
     <color name="color_242527_F1F7FE">@color/color_242527</color>
     <color name="color_303030_ecedef">@color/color_303030</color>
     <color name="color_515151_EBEBEB">@color/color_515151</color>
+    <color name="color_a3a3a3_666666">@color/color_a3a3a3</color>
 
 
     <color name="color_FFFFFF_DE000000">@color/color_FFFFFF</color>
