[Add] 新增快捷反波膽樣式

--- a/app/src/main/res/layout/view_quick_list.xml
+++ b/app/src/main/res/layout/view_quick_list.xml
@@ -57,6 +57,13 @@
         android:visibility="gone" />
 
     <include
+        android:id="@+id/league_odd_quick_odd_lcs"
+        layout="@layout/view_quick_odd_lcs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone" />
+
+    <include
         android:id="@+id/league_odd_quick_odd_btn_eps"
         layout="@layout/view_quick_odd_btn_eps"
         android:layout_width="match_parent"
