--- a/app/src/main/res/layout/itemview_odd_btn_2x2_v6.xml
+++ b/app/src/main/res/layout/itemview_odd_btn_2x2_v6.xml
@@ -48,4 +48,13 @@
         android:layout_marginBottom="6dp"
         app:ob_hide_item_flag="true" />
 
+    <org.cxct.sportlottery.ui.game.widget.OddsButton
+        android:id="@+id/odd_btn_row1_draw_cs"
+        android:layout_width="match_parent"
+        android:layout_height="144dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginBottom="6dp"
+        app:ob_hide_item_flag="true"
+        android:visibility="gone"/>
+
 </LinearLayout>
