--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -120,6 +120,12 @@
     <!--以下部分，是系统中的白天的色值 -->
     <!--命名規則，color_[夜間色碼]_[白天色碼] -->
 
+    <color name="color_025BE8">#025BE8</color>
+    <color name="color_6C7BA8">#6C7BA8</color>
+    <color name="background">@color/color_F0F5FA</color>
+    <color name="color_414655">#414655</color>
+
+
     <color name="color_262626_edf4ff">@color/color_edf4ff</color>
     <color name="color_0C2040_a9bedf">@color/color_a9bedf</color>
     <color name="color_317FFF_1463cf">@color/color_1463cf</color>
