--- a/app/src/main/res/layout/itemview_league_odd_v5.xml
+++ b/app/src/main/res/layout/itemview_league_odd_v5.xml
@@ -498,18 +498,19 @@
 
         <TextView
             android:id="@+id/tv_correct_1"
-            android:layout_width="70dp"
+            android:layout_width="wrap_content"
+            android:minWidth="70dp"
             android:layout_height="match_parent"
             android:layout_marginEnd="8dp"
             android:gravity="center"
-            android:textColor="@color/color_a3a3a3_666666"
+            android:textColor="@color/color_CCCCCC_000000"
             android:textSize="@dimen/textSize12sp"
-            android:textStyle="bold"
             tools:text="abc" />
 
         <TextView
             android:id="@+id/tv_correct_2"
-            android:layout_width="70dp"
+            android:layout_width="wrap_content"
+            android:minWidth="70dp"
             android:layout_height="match_parent"
             android:gravity="center"
             android:textColor="@color/color_a3a3a3_666666"
