--- a/app/src/main/res/layout/itemview_league_odd_v5.xml
+++ b/app/src/main/res/layout/itemview_league_odd_v5.xml
@@ -503,6 +503,7 @@
             android:layout_height="match_parent"
             android:layout_marginEnd="8dp"
             android:gravity="center"
+            android:maxLines="1"
             android:textColor="@color/color_CCCCCC_000000"
             android:textSize="@dimen/textSize12sp"
             tools:text="abc" />
@@ -514,6 +515,7 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:textColor="@color/color_a3a3a3_666666"
+            android:maxLines="1"
             android:textSize="@dimen/textSize12sp"
             tools:text="abc" />
 
