--- a/app/src/main/res/drawable/bg_title.xml
+++ b/app/src/main/res/drawable/bg_title.xml
@@ -5,8 +5,8 @@
 
     <gradient android:type="linear"
         android:useLevel="true"
-        android:startColor="#ff3b78ff"
-        android:endColor="#ff0065e9"
+        android:startColor="#fff"
+        android:endColor="#fff"
         android:angle="135" />
 
 </shape>
