--- a/app/src/main/res/layout/activity_profile_center.xml
+++ b/app/src/main/res/layout/activity_profile_center.xml
@@ -844,8 +844,7 @@
                                     android:background="@null"
                                     android:gravity="center"
                                     android:minHeight="48dp"
-                                    android:orientation="horizontal"
-                                    android:visibility="gone">
+                                    android:orientation="horizontal">
 
                                     <ImageView
                                         android:layout_width="wrap_content"
