--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -347,4 +347,6 @@
     <color name="color_A5AABF">#A5AABF</color>
     <color name="color_C4D0DE">#C4D0DE</color>
     <color name="color_DAE7F6">#DAE7F6</color>
+    <color name="color_E23434">#E23434</color>
+    <color name="color_C9CFD7">#C9CFD7</color>
 </resources>
